# optee_os

lib/libnxpse050/se050/simw-top/: Android.mk  CMakeLists.txt  CleanSpec.mk  README.First.txt
lib/libnxpse050/se050/simw-top/akm/: Readme.rst
lib/libnxpse050/se050/simw-top/akm/doc/: I2C-operation.uml  stack-with-se050.rst  trust_provisioning.rst  trust_provisioning_example.java
lib/libnxpse050/se050/simw-top/demos/: version_info.txt
lib/libnxpse050/se050/simw-top/demos/a71ch/: CMakeLists.txt
lib/libnxpse050/se050/simw-top/demos/apdu_player/: CMakeLists.txt  Readme.rst
lib/libnxpse050/se050/simw-top/demos/aws/: CMakeLists.txt
lib/libnxpse050/se050/simw-top/demos/ksdk/: CMakeLists.txt
lib/libnxpse050/se050/simw-top/demos/lpc55s/: CMakeLists.txt
lib/libnxpse050/se050/simw-top/demos/nxpnfcrdlib/: CMakeLists.txt
lib/libnxpse050/se050/simw-top/demos/se05x/: Android.mk
lib/libnxpse050/se050/simw-top/demos/test_Crypto/: test_Crypto.c  test_mac_multiStep.c
lib/libnxpse050/se050/simw-top/demos/tfm_port/: ksdk_mbedcrypto_entropy.c
lib/libnxpse050/se050/simw-top/doc/: appendix.html  genindex.html  index.html  toc.html
lib/libnxpse050/se050/simw-top/doc/_static/: bootstrap-sphinx.js
lib/libnxpse050/se050/simw-top/doc/a71ch/: a71ch_legacy_hlse_api.html  a71ch_miscellaneous.html
lib/libnxpse050/se050/simw-top/doc/akm/: Readme.html
lib/libnxpse050/se050/simw-top/doc/api/: api_list.html  class_view_hierarchy.html  define_ex__sss__main__inc_8h_1a04543de0eab628c27b9d5b7e971b8591.html  define_ex__sss__main__inc_8h_1a082fb204028aaf9551006347f57ee79a.html  define_fsl__sss__api_8h_1a39969f48eef83c47be423d614915c2f8.html  define_fsl__sss__api_8h_1a48acb15f2b020fd3bc4c2b15ff624284.html  define_fsl__sss__api_8h_1a6a057e7a2065a10b210afdeb94bae6f1.html  define_fsl__sss__api_8h_1ae926df49f1fbab82d5bdb74dd4f36791.html  define_fsl__sss__se05x__apis_8h_1a03428ef5f3d83f807423cc082f5b1d86.html  define_fsl__sss__se05x__apis_8h_1a053d59c0a21ed44faf308d7fbeed2a4e.html  define_fsl__sss__se05x__apis_8h_1a0a0bf1c33ad8f2412c90e9843cbc96ed.html  define_fsl__sss__se05x__apis_8h_1a0ef2490f1e4a59965b9869634a5858f9.html  define_fsl__sss__se05x__apis_8h_1a126e107ef55553ff2c296c2acee896cb.html  define_fsl__sss__se05x__apis_8h_1a18f4a3c294052109668c2197e42c24c4.html  define_fsl__sss__se05x__apis_8h_1a1a3cb45f553c2e0f4baab6e0e01a00eb.html  define_fsl__sss__se05x__apis_8h_1a2570277b6b614e459a142f99d38eee59.html  define_fsl__sss__se05x__apis_8h_1a2832ec5d0615ef603a6ed861ef8807d3.html  define_fsl__sss__se05x__apis_8h_1a2834384d6d1f751488e294832f651b28.html  define_fsl__sss__se05x__apis_8h_1a2fbe2cd95961fe20ab27592915510f5a.html  define_fsl__sss__se05x__apis_8h_1a4b8d3cf5beaf2f000215a63426e6feac.html  define_fsl__sss__se05x__apis_8h_1a5b48313ea926c46cbe41d821258be225.html  define_fsl__sss__se05x__apis_8h_1a64072ae98e2c917e58246407d40e5b3d.html  define_fsl__sss__se05x__apis_8h_1a65b3ffc57fd5feceb474e1dc16330430.html  define_fsl__sss__se05x__apis_8h_1a71445b99a1999a27f37a2a0186f3ee88.html  define_fsl__sss__se05x__apis_8h_1a8064435dd40cdc9794f06e48b0472c63.html  define_fsl__sss__se05x__apis_8h_1a87ba3d58244a269e114080b8b868f16d.html  define_fsl__sss__se05x__apis_8h_1a8eeb4f42784eb06034d39116264c0164.html  define_fsl__sss__se05x__apis_8h_1a9d120688b5703dd8af3b81bf7e7ca62b.html  define_fsl__sss__se05x__apis_8h_1aa6f48dda4eb533d2a46eed1e105f96e8.html  define_fsl__sss__se05x__apis_8h_1aaa1ba00ab23c1d3bd9dc8168f704b693.html  define_fsl__sss__se05x__apis_8h_1aacc164ba2a201a1c1627ccd3a3794cd8.html  define_fsl__sss__se05x__apis_8h_1ab84a42feabf4ebd67b5fd3d9890b6fe0.html  define_fsl__sss__se05x__apis_8h_1ac42bbde62b56e49c52c3f42d89b09782.html  define_fsl__sss__se05x__apis_8h_1ac509bbb38f83b558e1483e797b994f06.html  define_fsl__sss__se05x__apis_8h_1ad62cc607e017a374807dd4e9b407cb56.html  define_fsl__sss__se05x__apis_8h_1adeb1755d5cfb42078da9b27a34001ab0.html  define_fsl__sss__se05x__apis_8h_1adee6d55c2027758d21633d9ba268c88d.html  define_fsl__sss__se05x__apis_8h_1aef64084bbf40cc2bc1fcdef4838bae41.html  define_fsl__sss__se05x__apis_8h_1af8c8c0528e4547c9898aa39ad0bd3ad2.html  define_fsl__sss__se05x__apis_8h_1af9bc0c5d5699ed9704f0870595358fd5.html  (+221 more)
lib/libnxpse050/se050/simw-top/doc/appendix/: apdu_write_to_buffer.html  glossary.html  platfscp.html  rjct_server.html  se_uid.html  upload_se05x_using_pycli.html  vcom.html  version_info.html
lib/libnxpse050/se050/simw-top/doc/building/: frdm-k64f-cmake.html  frdm-k64f-sdk.html  rpi3.html
lib/libnxpse050/se050/simw-top/ext/: CMakeLists.txt  amazon-freertos.cmake  mbed-crypto.cmake  nxpnfcrdlib.cmake  open62541.cmake
lib/libnxpse050/se050/simw-top/hostlib/: CMakeLists.txt
lib/libnxpse050/se050/simw-top/mal/: version_info.txt
lib/libnxpse050/se050/simw-top/pycli/: readme.txt
lib/libnxpse050/se050/simw-top/scripts/: ToolchainFile_imx6.cmake  cmake_features.py  cmake_options.mak.in  cmake_options.py  cmake_options.sh  cmake_options_installed.cmake.in  cmake_options_values.cmake  create_cmake_projects.py  do_clang_format.sh  env_setup.sh  ksdk_frdmk64f.cmake  parse_oef_keys.py
lib/libnxpse050/se050/simw-top/sss/: CMakeLists.txt
lib/libnxpse050/se050/simw-top/tools/: README.txt
lib/libnxpse050/simw-top/demos/: CMakeLists.txt
lib/libnxpse050/simw-top/demos/a71ch/: ex_a71ch_sss_aes_wrap_key.c  ex_a71ch_sss_ecc.c
lib/libnxpse050/simw-top/demos/apdu_player/: apdu_player.c
lib/libnxpse050/simw-top/demos/opc_ua/: CMakeLists.txt
lib/libnxpse050/simw-top/demos/se05x/: CMakeLists.txt
lib/libnxpse050/simw-top/demos/test_Crypto/: CMakeLists.txt  readme.txt  test_Crypto.h
lib/libnxpse050/simw-top/demos/tfm_port/: ksdk_mbedcrypto_config.h  ksdk_mbedcrypto_hw_config.h
lib/libnxpse050/simw-top/ext/JRCPProxyConsole/: CMakeLists.txt  JrcpTcpServer.h  smComSerial_wrapper.cpp  smComSerial_wrapper.hpp
lib/libnxpse050/simw-top/hostlib/useCase/: CMakeLists.txt
lib/libnxpse050/simw-top/mal/: CMakeLists.txt
lib/libnxpse050/simw-top/mal/ex/: CMakeLists.txt
lib/libnxpse050/simw-top/mal/tools/: prot_to_bin_folder.bat  rename_ext_to_txt.bat
(+1585 files in other folders)
